# DeepThink-Agent

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  VISION.md
src/deepthink_agent/: __init__.py  config.py  deepseek_client.py  models_api.py  prompts.py  services.py  streaming.py
src/deepthink_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deepthink_agent/web/: __init__.py  app.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_prompts.py  test_services.py  test_streaming.py
